--- a/firstScrapping.ipynb
+++ b/firstScrapping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,55 +60,6 @@
     "        time.sleep(1)\n",
     "\n",
     "\n",
-    "    def getSpecializations(self):\n",
-    "\n",
-    "        specializations = []        \n",
-    "\n",
-    "        WebDriverWait(self.driver, tempsAttente).until(EC.visibility_of_element_located((By.XPATH, '//input[@class=\"searchbar-input searchbar-query-input\"]')))\n",
-    "        text_area = self.driver.find_element(By.XPATH, '//input[@class=\"searchbar-input searchbar-query-input\"]')\n",
-    "\n",
-    "        letters = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
-    "\n",
-    "\n",
-    "        for letter in letters :\n",
-    "            text_area.clear()\n",
-    "            time.sleep(1)\n",
-    "            text_area.send_keys(letter)\n",
-    "            time.sleep(2)\n",
-    "\n",
-    "            #getting the first result\n",
-    "            try:\n",
-    "                path = '//button[@class=\"searchbar-result searchbar-result-active\"]'\n",
-    "                WebDriverWait(self.driver, tempsAttente).until(EC.visibility_of_element_located((By.XPATH, path)))\n",
-    "                element = self.driver.find_element(By.XPATH, path)\n",
-    "                specialization = element.get_attribute('id')\n",
-    "\n",
-    "                if specialization not in specializations:\n",
-    "                    specializations.append(specialization)\n",
-    "                else:\n",
-    "                    print('Specialization ', specialization, 'already found')\n",
-    "                    \n",
-    "                print(specializations[-1])\n",
-    "\n",
-    "                #getting the other results\n",
-    "                try :\n",
-    "                    path = '//button[@class=\"searchbar-result\"]'\n",
-    "                    WebDriverWait(self.driver, 2).until(EC.visibility_of_element_located((By.XPATH, path)))\n",
-    "                    elements = self.driver.find_elements(By.XPATH, path)\n",
-    "                    \n",
-    "                    for element in elements:\n",
-    "                        specializations.append(element.get_attribute('id'))\n",
-    "                        print(specializations[-1])\n",
-    "\n",
-    "                except:\n",
-    "                    pass\n",
-    "\n",
-    "            except:\n",
-    "                pass\n",
-    "        \n",
-    "        return specializations\n",
-    "\n",
-    "\n",
     "    #for now we get only the first doctors that appear in the page\n",
     "    def getDoctors(self, specialization, city):\n",
     "\n",
@@ -130,29 +81,54 @@
     "\n",
     "        WebDriverWait(self.driver, tempsAttente).until(EC.visibility_of_element_located((By.XPATH, '//span[@class=\"searchbar-submit-button-label dl-text-transform-none\"]')))\n",
     "        self.driver.find_element(By.XPATH, '//span[@class=\"searchbar-submit-button-label dl-text-transform-none\"]').click()\n",
-    "        \n",
+    "\n",
     "        print('Searching results for :', specialization, 'in', city)\n",
     "        time.sleep(2)\n",
-    "        \n",
-    "        WebDriverWait(self.driver, tempsAttente).until(EC.visibility_of_element_located((By.XPATH, '//div[@class=\"dl-search-result\"]')))\n",
-    "        docs = self.driver.find_elements(By.XPATH, '//div[@class=\"dl-search-result\"]')\n",
-    "        \n",
-    "        for doctor in docs:\n",
-    "            #first we get the \"easy\" features\n",
-    "            name = doctor.find_element(By.XPATH, './/h3[@data-test=\"dl-search-result-name\"]').text\n",
-    "            city = city\n",
-    "            specialization = specialization\n",
     "\n",
-    "            #the the harder ones\n",
-    "            try:\n",
-    "                WebDriverWait(self.driver, tempsAttente).until(EC.visibility_of_element_located((By.XPATH, './/div[@class=\"Tappable-inactive availabilities-slot\"]')))\n",
-    "                first_dispo = doctor.find_element(By.XPATH, './/div[@class=\"Tappable-inactive availabilities-slot\"]').get_attribute('aria-label')\n",
-    "            except:\n",
-    "                first_dispo = 'null'    #means that there are no near in time disponibilites\n",
+    "        WebDriverWait(self.driver, 10).until(EC.visibility_of_element_located((By.XPATH, '//h4[@class=\"dl-text dl-text-body dl-text-bold dl-text-s dl-text-neutral-150 total-number-of-results dl-margin-r-8\"]')))\n",
+    "        #number of doctors in city\n",
+    "        nbr_result = self.driver.find_element(By.XPATH, '//h4[@class=\"dl-text dl-text-body dl-text-bold dl-text-s dl-text-neutral-150 total-number-of-results dl-margin-r-8\"]').text.split(\" \")[0]\n",
+    "        #nbr of doctors we want\n",
+    "        nbr = int(int(nbr_result)*0.2)\n",
+    "        #nbr of pages\n",
+    "        pages = nbr//20\n",
+    "        print(pages)\n",
     "\n",
-    "            fee = \"\"\n",
-    "            doctors.append(Doctor(name, city, specialization, first_dispo, fee))\n",
+    "        for _ in range(pages + 1):\n",
     "            \n",
+    "            self.driver.execute_script(\"window.scrollTo(0, 6300);\")\n",
+    "            \n",
+    "            WebDriverWait(self.driver, tempsAttente).until(EC.visibility_of_element_located((By.XPATH, '//div[@class=\"dl-search-result\"]')))\n",
+    "            docs = self.driver.find_elements(By.XPATH, '//div[@class=\"dl-search-result\"]')\n",
+    "            \n",
+    "            for doctor in docs:\n",
+    "                #first we get the \"easy\" features\n",
+    "                name = doctor.find_element(By.XPATH, './/h3[@data-test=\"dl-search-result-name\"]').text\n",
+    "                city = city\n",
+    "                specialization = specialization\n",
+    "\n",
+    "                #the the harder ones\n",
+    "                try:\n",
+    "                    WebDriverWait(self.driver, tempsAttente).until(EC.visibility_of_element_located((By.XPATH, './/div[@class=\"Tappable-inactive availabilities-slot\"]')))\n",
+    "                    first_dispo = doctor.find_element(By.XPATH, './/div[@class=\"Tappable-inactive availabilities-slot\"]').get_attribute('aria-label')\n",
+    "                except:\n",
+    "                    try:\n",
+    "                        WebDriverWait(self.driver, tempsAttente).until(EC.visibility_of_element_located((By.XPATH, './/span[@class=\"dl-button-label\"]')))\n",
+    "                        first_dispo = doctor.find_elements(By.XPATH, './/span[@class=\"dl-button-label\"]')[1].text.split(\" \")[3:5]\n",
+    "                    except:\n",
+    "                        first_dispo = 'null'    #means that there are no near in time disponibilites\n",
+    "\n",
+    "                print(name, first_dispo)\n",
+    "                fee = \"\"\n",
+    "                doctors.append(Doctor(name, city, specialization, first_dispo, fee))\n",
+    "\n",
+    "            try:\n",
+    "                WebDriverWait(self.driver, 3).until(EC.visibility_of_element_located((By.XPATH, \"//a[text()='Suivant']\")))\n",
+    "                self.driver.find_element(By.XPATH, \"//a[text()='Suivant']\").click()\n",
+    "            except:\n",
+    "                pass\n",
+    "\n",
+    "\n",
     "        return doctors\n",
     "\n",
     "    def getFees(self, name):\n",
@@ -163,6 +139,7 @@
     "        self.driver.find_element(By.XPATH, '//input[@class=\"searchbar-input searchbar-query-input\"]').clear()\n",
     "        self.driver.find_element(By.XPATH, '//input[@class=\"searchbar-input searchbar-query-input\"]').send_keys(name)\n",
     "        #We need to enter the city to register it\n",
+    "\n",
     "        try:\n",
     "            WebDriverWait(self.driver, 0.5).until(EC.visibility_of_element_located((By.XPATH, '//input[@class=\"searchbar-input searchbar-query-input searchbar-query-input-opened\"]')))\n",
     "            self.driver.find_element(By.XPATH, '//input[@class=\"searchbar-input searchbar-query-input searchbar-query-input-opened\"]').send_keys(Keys.ENTER)\n",
@@ -190,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,33 +193,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cities = ['Paris', 'Lyon', 'Sancerre', 'Confolens']\n",
-    "specializations = ['Medecin generaliste', 'Dentiste']"
+    "cities = ['Poitiers', 'Rochefourchat', 'Majastres', 'Aulan', 'Ornes', 'Baren', 'Senconac', 'Caubous', 'Sancerre', 'Paris', 'Lyon', 'Marseille', 'Toulouse', 'Nice', 'Nantes', 'Montpellier', 'Strasbourg', 'Bordeaux', 'Lille', 'Poitiers', 'Dunkerque', 'Pau', 'Mulhouse', 'Lorient', 'Le Havre', 'Annecy', 'Troyes', 'La Rochelle', 'Amiens']\n",
+    "specializations = ['Medecin generaliste', 'Chirurgien-dentiste', 'Ophtalmologue', 'Dermatologue et venerologue', 'Cardiologue', 'Rhumatologue']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 237,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/bm/t8hxv1ms6s30y8czfw0pmfk00000gn/T/ipykernel_2019/1043591837.py:14: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  self.driver = webdriver.Chrome(ChromeDriverManager().install())\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connecting to https://www.doctolib.fr\n",
+      "Searching results for : Medecin generaliste in Poitiers\n",
+      "1\n",
+      "Dr David CHAMBENOIT ['18', 'janvier']\n",
+      "Dr Céline BRECHON-GIRAUD ['11', 'janvier']\n",
+      "Dr Alain SHEIKHALISHAHI ['26', 'janvier']\n",
+      "Dr Violaine Ricoulleau ['11', 'janvier']\n",
+      "Dr Airelle PLANQUES ['16', 'janvier']\n",
+      "Laura BORTHOMIEU ['18', 'janvier']\n",
+      "Dr Angèle DEMION ['12', 'janvier']\n",
+      "Dr Karine Brunet ['17', 'janvier']\n",
+      "Dr Céline BRECHON-GIRAUD ['12', 'janvier']\n",
+      "Centre Médical de Soins Immédiats 86 jeu. 5 janv. 17:00\n",
+      "Dr Cécile HUMMEL ['9', 'janvier']\n",
+      "Dr Elsa CANTOS jeu. 5 janv. 16:30\n",
+      "Dr Claire REIF null\n",
+      "Dr Sébastien Caquelin null\n",
+      "Patricia Mercade Point null\n",
+      "Dr Mathilde COULAIS null\n",
+      "Stephane Colin null\n",
+      "Dr Lakshmipriya Le Bonheur null\n",
+      "Dr François Birault null\n",
+      "Dr Gabrielle Pequeriau null\n",
+      "Dr Lucile Partaud null\n",
+      "Dr Marion Delouche null\n",
+      "Dr David Souchaud null\n",
+      "Dr Stéphanie Mignot - Grandcolin null\n",
+      "Dr Laurent Toma null\n",
+      "Nathalie Dumureau Peltier null\n",
+      "Marc BAHUET null\n",
+      "Christophe INGRAND null\n",
+      "Dr Déborah CARRIN null\n",
+      "Dr Bénédicte Garrigue-Guyonnaud null\n",
+      "Dr Yann Tierce ['12', 'janvier']\n",
+      "Vincent Louette ['11', 'janvier']\n",
+      "Justine Martin ['11', 'janvier']\n",
+      "Dr Amandine Merrant ['19', 'janvier']\n",
+      "Dr Godefroy Baune ['12', 'janvier']\n",
+      "Dr Dolorès LACOSTE ['27', 'janvier']\n",
+      "Dr Arnaud Bossard ['16', 'janvier']\n",
+      "Dr Aurélie Charonnet ['16', 'janvier']\n",
+      "Dr Jean-Luc Autuoro ['12', 'janvier']\n",
+      "Dr Xavier LEMERCIER ['13', 'janvier']\n",
+      "[<__main__.Doctor object at 0x145820450>, <__main__.Doctor object at 0x145584fd0>, <__main__.Doctor object at 0x1457aba50>, <__main__.Doctor object at 0x1457a8750>, <__main__.Doctor object at 0x145820050>, <__main__.Doctor object at 0x145822b10>, <__main__.Doctor object at 0x1427e5b10>, <__main__.Doctor object at 0x145823910>, <__main__.Doctor object at 0x145822d10>, <__main__.Doctor object at 0x145823f50>, <__main__.Doctor object at 0x1458232d0>, <__main__.Doctor object at 0x1458224d0>, <__main__.Doctor object at 0x145821990>, <__main__.Doctor object at 0x145821a90>, <__main__.Doctor object at 0x145823150>, <__main__.Doctor object at 0x1457eb850>, <__main__.Doctor object at 0x1457e93d0>, <__main__.Doctor object at 0x1457e81d0>, <__main__.Doctor object at 0x1457eb490>, <__main__.Doctor object at 0x145585990>, <__main__.Doctor object at 0x1458219d0>, <__main__.Doctor object at 0x1457a80d0>, <__main__.Doctor object at 0x1457a8190>, <__main__.Doctor object at 0x1455ce750>, <__main__.Doctor object at 0x145820390>, <__main__.Doctor object at 0x1455cf610>, <__main__.Doctor object at 0x1457ab4d0>, <__main__.Doctor object at 0x145822450>, <__main__.Doctor object at 0x1455ce090>, <__main__.Doctor object at 0x143e725d0>, <__main__.Doctor object at 0x145823590>, <__main__.Doctor object at 0x145823410>, <__main__.Doctor object at 0x14574bf10>, <__main__.Doctor object at 0x1457eb350>, <__main__.Doctor object at 0x1455d86d0>, <__main__.Doctor object at 0x145670e90>, <__main__.Doctor object at 0x143a9a650>, <__main__.Doctor object at 0x145689890>, <__main__.Doctor object at 0x1457e9610>, <__main__.Doctor object at 0x1457a8610>]\n",
+      "Searching results for : Chirurgien-dentiste in Poitiers\n",
+      "0\n",
+      "Dr Alin Fodor null\n"
+     ]
+    }
+   ],
    "source": [
     "connector = Driver()\n",
     "connector.connect(\"https://www.doctolib.fr\")\n",
     "doctors = []\n",
     "\n",
     "#Get all the doctors names, cities, specializations and their next possible reservation\n",
+    "\n",
     "for city in cities:\n",
     "    for spec in specializations:\n",
-    "        doctors = doctors + connector.getDoctors(spec, city)"
+    "        doctors = doctors + connector.getDoctors(spec, city)\n",
+    "        docs = []\n",
+    "        for doc in doctors:\n",
+    "            docs.append(doc.features())\n",
+    "        pd.DataFrame(docs, columns=['Name', 'Specialization', 'City', 'Waiting Time', 'Fees']).to_csv(\"doctors.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -341,6 +385,30 @@
    "outputs": [],
    "source": [
     "pd.DataFrame(doctors_features, columns=['Name', 'Specialization', 'City', 'Waiting Time', 'Fees']).to_csv(\"doctors_features.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<__main__.Doctor object at 0x1441331d0>, <__main__.Doctor object at 0x14566acd0>, <__main__.Doctor object at 0x14572f9d0>, <__main__.Doctor object at 0x1457ce690>, <__main__.Doctor object at 0x145578310>, <__main__.Doctor object at 0x1457cf710>, <__main__.Doctor object at 0x1457cfbd0>, <__main__.Doctor object at 0x1457cc790>, <__main__.Doctor object at 0x1457cd110>, <__main__.Doctor object at 0x14566b190>, <__main__.Doctor object at 0x1457cc390>, <__main__.Doctor object at 0x14566bb90>, <__main__.Doctor object at 0x144132850>, <__main__.Doctor object at 0x1457cff10>, <__main__.Doctor object at 0x14566af50>, <__main__.Doctor object at 0x1457cc8d0>, <__main__.Doctor object at 0x1457bc050>, <__main__.Doctor object at 0x14572da90>, <__main__.Doctor object at 0x14566a450>, <__main__.Doctor object at 0x1457bd7d0>, <__main__.Doctor object at 0x14566a510>, <__main__.Doctor object at 0x1457ce950>, <__main__.Doctor object at 0x14572c690>, <__main__.Doctor object at 0x14412e310>, <__main__.Doctor object at 0x14412f0d0>, <__main__.Doctor object at 0x144115050>, <__main__.Doctor object at 0x145668690>, <__main__.Doctor object at 0x144123d10>, <__main__.Doctor object at 0x14572ed10>, <__main__.Doctor object at 0x14412f590>, <__main__.Doctor object at 0x1456c6d90>, <__main__.Doctor object at 0x1457ccd10>, <__main__.Doctor object at 0x143e644d0>, <__main__.Doctor object at 0x143e65b10>, <__main__.Doctor object at 0x1457cc750>, <__main__.Doctor object at 0x145722b90>, <__main__.Doctor object at 0x1457cc610>, <__main__.Doctor object at 0x145721410>, <__main__.Doctor object at 0x14566b550>, <__main__.Doctor object at 0x1457bf6d0>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(doctors)"
    ]
   }
  ],
