--- a/firstScrapping.ipynb
+++ b/firstScrapping.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,12 +162,9 @@
     "            fee = str(int(fee.split(\" \")[0]))\n",
     "        except:\n",
     "            try :\n",
-    "                # WebDriverWait(self.driver, 0.5).until(EC.visibility_of_element_located((By.XPATH, \"//div[contains(text(), 'Conventionn')]\")))\n",
-    "                # fee = self.driver.find_element(By.XPATH, \"//div[contains(text(), 'Conventionn')]\").text\n",
-    "                WebDriverWait(self.driver, 0.5).until(EC.visibility_of_element_located((By.XPATH, '//div[@class=\"dl-profile-text\"]')))\n",
-    "                fee = self.driver.find_element(By.XPATH, '//div[@class=\"dl-profile-text\"]').text\n",
-    "                WebDriverWait(self.driver, 0.5).until(EC.visibility_of_element_located((By.XPATH, \"//a[text()='Suivant']\")))\n",
-    "                self.driver.find_element(By.XPATH, \"//a[text()='Suivant']\").click()\n",
+    "                WebDriverWait(self.driver, 0.5).until(EC.visibility_of_element_located((By.XPATH, '//div[@class=\"dl-profile-text\"]//div[1]')))\n",
+    "                first_sub_div = self.driver.find_element(By.XPATH, '//div[@class=\"dl-profile-text\"]//div[1]')\n",
+    "                fee = first_sub_div.text\n",
     "            except:\n",
     "                fee = 'null'        #if the fee tag cannot be found it means that it is conventionné\n",
     "\n",
@@ -451,14 +448,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bm/t8hxv1ms6s30y8czfw0pmfk00000gn/T/ipykernel_2201/4246120342.py:17: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/var/folders/bm/t8hxv1ms6s30y8czfw0pmfk00000gn/T/ipykernel_2201/1531847928.py:17: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  self.driver = webdriver.Chrome(ChromeDriverManager().install())\n"
      ]
     },
@@ -466,19 +463,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Connecting to https://www.doctolib.fr\n"
+      "Connecting to https://www.doctolib.fr\n",
+      "Centre Médical de Soins Immédiats 86\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [6], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#Now we need to find the fees for each doctor\u001b[39;00m\n\u001b[1;32m      3\u001b[0m connector \u001b[38;5;241m=\u001b[39m Driver()\n\u001b[0;32m----> 4\u001b[0m \u001b[43mconnector\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconnect\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mhttps://www.doctolib.fr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m doctors \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdoctors.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      7\u001b[0m doctors\u001b[38;5;241m.\u001b[39mpop(doctors\u001b[38;5;241m.\u001b[39mcolumns[\u001b[38;5;241m0\u001b[39m])\n",
-      "Cell \u001b[0;32mIn [2], line 27\u001b[0m, in \u001b[0;36mDriver.connect\u001b[0;34m(self, url)\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;66;03m# TabsInteraction.TabsCreation(self.driver, \"https://www.doctolib.fr\", \"\")\u001b[39;00m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;66;03m# TabsInteraction.switchToTab(self.driver, 0)\u001b[39;00m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mConnecting to\u001b[39m\u001b[38;5;124m\"\u001b[39m, url)\n\u001b[0;32m---> 27\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/bm/t8hxv1ms6s30y8czfw0pmfk00000gn/T/ipykernel_2201/884422226.py:13: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  doctors['Fees'][i] = fee\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 null\n",
+      "Marc BAHUET\n",
+      "1 25\n",
+      "Nathalie Dumureau Peltier\n",
+      "2 25\n",
+      "Dr Violaine Ricoulleau\n",
+      "3 25\n",
+      "Dr Alain SHEIKHALISHAHI\n",
+      "4 25\n",
+      "Dr Karine Brunet\n",
+      "5 25\n",
+      "Dr Cécile HUMMEL\n",
+      "6 25\n",
+      "Dr David CHAMBENOIT\n",
+      "7 60\n",
+      "Dr Airelle PLANQUES\n",
+      "8 25\n",
+      "Christophe INGRAND\n",
+      "9 25\n",
+      "Dr Angèle DEMION\n",
+      "10 50\n",
+      "Dr Elsa CANTOS\n",
+      "11 25\n",
+      "Laura BORTHOMIEU\n",
+      "12 25\n",
+      "Dr Céline BRECHON-GIRAUD\n",
+      "13 null\n",
+      "Dr Céline BRECHON-GIRAUD\n",
+      "14 null\n",
+      "Dr Déborah CARRIN\n",
+      "15 null\n",
+      "Stephane Colin\n",
+      "16 25\n",
+      "Dr Marion Delouche\n",
+      "17 25\n",
+      "Dr Gabrielle Pequeriau\n",
+      "18 25\n",
+      "Dr Lakshmipriya Le Bonheur\n",
+      "19 25\n"
      ]
     }
    ],
@@ -492,7 +534,7 @@
     "doctors.pop(doctors.columns[0])\n",
     "\n",
     "\n",
-    "for i in range(50):\n",
+    "for i in range(20):\n",
     "    print(doctors['Name'][i])\n",
     "    fee = connector.getFees(doctors['Name'][i])\n",
     "    doctors['Fees'][i] = fee\n",
