--- a/firstScrapping.ipynb
+++ b/firstScrapping.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +436,7 @@
     "        docs = []\n",
     "        for doc in doctors:\n",
     "            docs.append(doc.features())\n",
-    "        pd.DataFrame(docs, columns=['Name', 'City', 'Specialization', 'Waiting Time', 'Fees']).to_csv(\"doctors2.csv\")"
+    "        pd.DataFrame(docs, columns=['Name', 'City', 'Specialization', 'Waiting Time', 'Fees']).to_csv(\"doctors_new.csv\")"
    ]
   },
   {
@@ -448,14 +448,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bm/t8hxv1ms6s30y8czfw0pmfk00000gn/T/ipykernel_2201/1531847928.py:17: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/var/folders/bm/t8hxv1ms6s30y8czfw0pmfk00000gn/T/ipykernel_2201/3246555718.py:17: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  self.driver = webdriver.Chrome(ChromeDriverManager().install())\n"
      ]
     },
@@ -464,63 +464,21 @@
      "output_type": "stream",
      "text": [
       "Connecting to https://www.doctolib.fr\n",
+      "4178\n",
       "Centre Médical de Soins Immédiats 86\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/bm/t8hxv1ms6s30y8czfw0pmfk00000gn/T/ipykernel_2201/884422226.py:13: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  doctors['Fees'][i] = fee\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 null\n",
-      "Marc BAHUET\n",
-      "1 25\n",
-      "Nathalie Dumureau Peltier\n",
-      "2 25\n",
-      "Dr Violaine Ricoulleau\n",
-      "3 25\n",
-      "Dr Alain SHEIKHALISHAHI\n",
-      "4 25\n",
-      "Dr Karine Brunet\n",
-      "5 25\n",
-      "Dr Cécile HUMMEL\n",
-      "6 25\n",
-      "Dr David CHAMBENOIT\n",
-      "7 60\n",
-      "Dr Airelle PLANQUES\n",
-      "8 25\n",
-      "Christophe INGRAND\n",
-      "9 25\n",
-      "Dr Angèle DEMION\n",
-      "10 50\n",
-      "Dr Elsa CANTOS\n",
-      "11 25\n",
-      "Laura BORTHOMIEU\n",
-      "12 25\n",
-      "Dr Céline BRECHON-GIRAUD\n",
-      "13 null\n",
-      "Dr Céline BRECHON-GIRAUD\n",
-      "14 null\n",
-      "Dr Déborah CARRIN\n",
-      "15 null\n",
-      "Stephane Colin\n",
-      "16 25\n",
-      "Dr Marion Delouche\n",
-      "17 25\n",
-      "Dr Gabrielle Pequeriau\n",
-      "18 25\n",
-      "Dr Lakshmipriya Le Bonheur\n",
-      "19 25\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [21], line 12\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(doctors)):\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;28mprint\u001b[39m(doctors[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mName\u001b[39m\u001b[38;5;124m'\u001b[39m][i])\n\u001b[0;32m---> 12\u001b[0m     fee \u001b[38;5;241m=\u001b[39m \u001b[43mconnector\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetFees\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdoctors\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mName\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     13\u001b[0m     doctors[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFees\u001b[39m\u001b[38;5;124m'\u001b[39m][i] \u001b[38;5;241m=\u001b[39m fee\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;28mprint\u001b[39m(i, fee)\n",
+      "Cell \u001b[0;32mIn [19], line 114\u001b[0m, in \u001b[0;36mDriver.getFees\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m    111\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdriver\u001b[38;5;241m.\u001b[39mfind_element(By\u001b[38;5;241m.\u001b[39mXPATH, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m//div[@class=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlogo-doctolib logo-doctolib-white\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mclick()\n\u001b[1;32m    113\u001b[0m \u001b[38;5;66;03m#writing the doctor name\u001b[39;00m\n\u001b[0;32m--> 114\u001b[0m \u001b[43mWebDriverWait\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdriver\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtempsAttente\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43muntil\u001b[49m\u001b[43m(\u001b[49m\u001b[43mEC\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvisibility_of_element_located\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mBy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mXPATH\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m//input[@class=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43msearchbar-input searchbar-query-input\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m]\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    115\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdriver\u001b[38;5;241m.\u001b[39mfind_element(By\u001b[38;5;241m.\u001b[39mXPATH, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m//input[@class=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msearchbar-input searchbar-query-input\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mclear()\n\u001b[1;32m    116\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdriver\u001b[38;5;241m.\u001b[39mfind_element(By\u001b[38;5;241m.\u001b[39mXPATH, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m//input[@class=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msearchbar-input searchbar-query-input\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39msend_keys(name)\n",
+      "File \u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/selenium/webdriver/support/wait.py:92\u001b[0m, in \u001b[0;36mWebDriverWait.until\u001b[0;34m(self, method, message)\u001b[0m\n\u001b[1;32m     90\u001b[0m     screen \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(exc, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mscreen\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m     91\u001b[0m     stacktrace \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(exc, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstacktrace\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[0;32m---> 92\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_poll)\n\u001b[1;32m     93\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m time\u001b[38;5;241m.\u001b[39mmonotonic() \u001b[38;5;241m>\u001b[39m end_time:\n\u001b[1;32m     94\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -534,15 +492,51 @@
     "doctors.pop(doctors.columns[0])\n",
     "\n",
     "\n",
-    "for i in range(20):\n",
+    "for i in range(len(doctors)):\n",
     "    print(doctors['Name'][i])\n",
     "    fee = connector.getFees(doctors['Name'][i])\n",
     "    doctors['Fees'][i] = fee\n",
-    "    print(i, fee)\n",
+    "    print(i, fee)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doctors.to_csv(\"doctors_fees.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Now we need to find the fees for each doctor\n",
+    "\n",
+    "connector = Driver()\n",
+    "connector.connect(\"https://www.doctolib.fr\")\n",
+    "\n",
+    "doctors = pd.read_csv('doctors_new.csv')\n",
+    "doctors.pop(doctors.columns[0])\n",
     "\n",
     "\n",
-    "doctors.to_csv(\"doctors2.csv\")\n",
-    "    "
+    "for i in range(len(doctors)):\n",
+    "    print(doctors['Name'][i])\n",
+    "    fee = connector.getFees(doctors['Name'][i])\n",
+    "    doctors['Fees'][i] = fee\n",
+    "    print(i, fee)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doctors.to_csv(\"doctors_new_fees.csv\")"
    ]
   }
  ],
